Fix all-day collapse button background

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -90,6 +90,7 @@
   user-select: none;
   font-size: 11px;
   line-height: 20px;
+  background: @day-bg-color;
 }
 
 .rbc-row-content {
